--- a/views/surveyForm.html
+++ b/views/surveyForm.html
@@ -94,7 +94,7 @@ color: whitesmoke;
             top: 40px;
             left: 297px;
         ;">Some Queries.</h2></center>
-      <div class="formDiv">  <form role="form"  action="HomePage" method="POST" class="question" style="border: 2px solid white; margin-top: 82px; font-size: 21px; border-radius: 71px;">
+      <div class="formDiv">  <form role="form"  action="https://pulkitupadhyay-my-lernings-6965.zeet.app/" method="POST" class="question" style="border: 2px solid white; margin-top: 82px; font-size: 21px; border-radius: 71px;">
             <div class="farm" id="detail" >
                 <label for="naam">Name:</label>
                <input type="text" name="name" id="naam" style=" position: absolute;
