create login button by index.ejs line no. 19 and style by style.css 51-60.

--- a/codeBite/views/index.ejs
+++ b/codeBite/views/index.ejs
@@ -16,6 +16,7 @@
   <div class="body">
     <div id="loader"></div>
     <div id="div1">
+      <button>Login</button>
       <div class="video1">
         <video autoplay loop muted src="./video/video.mp4"></video>
       </div>
