--- a/codeBite/public/stylesheets/style.css
+++ b/codeBite/public/stylesheets/style.css
@@ -48,6 +48,18 @@ body::-webkit-scrollbar{
   width: 100%;
   height: 100%;
 }
+#div1 button{
+  position: absolute;
+  top: 5vh;
+  right: 7vh;
+  border: 1px solid  black;
+  width: 12vh;
+  height: 4vh;
+  background-color: #474747;
+  color: white;
+  border-radius: 20px;
+
+}
 
 .overlay1{
   display: flex;
