--- a/codeBite/views/index.ejs
+++ b/codeBite/views/index.ejs
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>InidanRugs</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/kursor@0.1.6/dist/kursor.min.css" />
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/kursor@0.1.6/dist/kursor.min.css" /> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./stylesheets/style.css" />
 </head>
@@ -15,8 +15,8 @@
 <body>
   <div class="body">
     <div id="loader"></div>
-    <div id="div1">
-      <button>Login</button>
+   <div id="div1">
+    <a href="/login">  <button>  Login</button> </a>
       <div class="video1">
         <video autoplay loop muted src="./video/video.mp4"></video>
       </div>
