created loin page in frontend

--- a/codeBite/views/index.ejs
+++ b/codeBite/views/index.ejs
@@ -16,19 +16,28 @@
   <div class="body">
     <div id="loader"></div>
    <div id="div1">
-    <a href="/login">  <button>  Login</button> </a>
+    
+     <!-- <button id="sinupbtn">Sing up</button> -->
       <div class="video1">
+
         <video autoplay loop muted src="./video/video.mp4"></video>
+
       </div>
+       
+
       <div class="overlay1">
         <div class="overlay1-nav"></div>
         <h1 id="rugs" style="font-size: 3em; color: rgb(201,162,92);">INDIAN RUGS</h1>
         <h4 style="color: #9d9d9d; font-size: .7em;">The Art of Handwoven Carpets </h4>
         <a id="see" href="#container">See Our Collection</a>
+        <button id="logbtn" style="position:fixed; "><a href="/login" style="text-decoration: none" target="_blank"> Login/ SignUp</a> </button>
+      
+
       </div>
     </div>
     <div id="container">
       <div class="nav-container">
+
         <div onclick="javascript:window.location.href='/'" class="logo"></div>
         <a href="/menu">
           <div class="menu">
