--- a/codeBite/public/stylesheets/style.css
+++ b/codeBite/public/stylesheets/style.css
@@ -48,18 +48,21 @@ body::-webkit-scrollbar{
   width: 100%;
   height: 100%;
 }
-#div1 button{
-  position: absolute;
+#logbtn {
+  position:absolute;
   top: 5vh;
   right: 7vh;
   border: 1px solid  black;
-  width: 12vh;
+  width: 18vh;
   height: 4vh;
-  background-color: #474747;
-  color: white;
+  background-color: #473636;
+  color: rgb(249, 249, 249);
   border-radius: 20px;
+  z-index: 99;
+ 
 
 }
+
 
 .overlay1{
   display: flex;
