--- a/codeBite/views/index.ejs
+++ b/codeBite/views/index.ejs
@@ -56,7 +56,7 @@
             <div id="1" onclick="javascript:window.location.href='/price/<%= carpets[i]._id %>'" style="box-shadow: 0 18px 18px -18px black"
             class="swiper-slide">
             <img
-              src="/upload/<%= carpets[i].image %>" alt="" />
+              src="/upload/<%= carpets[i].image1 %>" alt="" />
             <h3><%= carpets[i].category %></h3>
             <h5><%= carpets[i].title %></h5>
             <h6> 5x8 - 10x8ft</h6>
@@ -81,7 +81,7 @@
             <div id="1" onclick="javascript:window.location.href='/price/<%= bags[i]._id %>'" style="box-shadow: 0 18px 18px -18px black"
             class="swiper-slide">
             <img
-              src="/upload/<%= bags[i].image %>" alt="" />
+              src="/upload/<%= bags[i].image1 %>" alt="" />
             <h3><%= bags[i].category %></h3>
             <h5><%= bags[i].title %></h5>
             <h6> 5x8 - 10x8ft</h6>
