--- a/codeBite/views/index.ejs
+++ b/codeBite/views/index.ejs
@@ -55,7 +55,7 @@
             
           </div>
 
-          <div class="login-btn">Login</div>
+          <div class="login-btn"><a href="/login">Login</a></div>
         </div>
 
 
