--- a/codeBite/public/stylesheets/style.css
+++ b/codeBite/public/stylesheets/style.css
@@ -50,6 +50,7 @@ body::-webkit-scrollbar {
   height: 100%;
 }
 .login-btn {
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,6 +62,10 @@ body::-webkit-scrollbar {
   color: rgb(255, 255, 255);
   border-radius: 20px;
   /* z-index: 99; */
+}
+.login-btn>a{
+  text-decoration: none;
+  color: white;
 }
 
 .overlay1 {
