--- a/codeBite/views/addnewpro.ejs
+++ b/codeBite/views/addnewpro.ejs
@@ -16,29 +16,34 @@
   <div id="card">
     <div id="left">
       <form action="/newProduct" name="myForm" method="post" enctype="multipart/form-data">  
-      <h2 id="B">BECOME A SELLER</h2>
-      <h3 id="N"  name="title">Title:-</h3>
+      <h2  id="B">BECOME A SELLER</h2>
+      <h3  id="N"  name="title">Title:-</h3>
       <h3 id="E" name="description">Description:-</h3>
       <h3 id="Num" name="price">price:-</h3>
       <h3 id="A" name="cataogry">catagory:-</h3>
-      <h3 id="F" >images:-</h3>
+      <h3 id="F" >images:-  
+        <!-- <input required  type="file" class="hu" style="margin-top: 10rem;" name="testimage"> -->
+      </h3>
+      <h3 id="F1"  > Sub images1:-</h3>
+      <h3 id="F2" >  Sub images2:-</h3>
+      <h3 id="F3" >Sub images3:-</h3>
 
       
 
     
-        <input id="onee" class="fom" name="title" >
-        <input id="two" class="fom" name="description" >
-        <input id="three" class="fom" name="price">
-        <input id="four" class="fom" name="catagory" >
-        <input style="margin-top: 2rem;" type="file" class="hu" name="testimage">
-        <input  type="file" class="hu" style="margin-top: 10rem;" name="testimage">
-        <input  type="file" class="hu" style="margin-top: 15rem;" name="testimage">
-        <input  type="file" class="hu" style="margin-top: 17rem;" name="testimage">
+        <input required id="onee" class="fom" name="title" >
+        <input required id="two" class="fom" name="description" >
+        <input required id="three" class="fom" name="price">
+        <input required id="four" class="fom" name="catagory" >
+        <input required style="margin-top: 3rem;" type="file" class="hu" name="testimage">
+        <input required style="margin-top: 6rem;"  type="file" class="hu" style="margin-top: 10rem;" name="testimage">
+        <input required style="margin-top: 9rem;" type="file" class="hu" style="margin-top: 15rem;" name="testimage">
+        <input required style="margin-top: 12rem;"  type="file" class="hu" style="margin-top: 17rem;" name="testimage">
         
        
       
   
-        <input id="hi"type="submit">
+        <input   id="hi"type="submit">
       </form>
     </div>
    
