implimented orders kal bas my orders ka page banana hai

--- a/codeBite/views/addnewpro.ejs
+++ b/codeBite/views/addnewpro.ejs
@@ -30,7 +30,8 @@
 
       
 
-    
+    <input type="string" name="seller_id" value="<%= user[0]._id %>" style="visibility:hidden;">
+        
         <input required id="onee" class="fom" name="title" >
         <input required id="two" class="fom" name="description" >
         <input required id="three" class="fom" name="price">
