--- a/codeBite/views/product.ejs
+++ b/codeBite/views/product.ejs
@@ -103,6 +103,7 @@
         </div>
     </div>
 
+    <!-------------------------------------------- pulkit added this line----------------------------------------- -->
 <form action="payment" method="POST">
 
     <input type="number" value="<%= product.price %>">
