now the website is wolking like pretty profesional

--- a/codeBite/views/index.ejs
+++ b/codeBite/views/index.ejs
@@ -25,7 +25,7 @@
       </div>
        
 
-      <!-- <div class="overlay1">
+      <div class="overlay1">
 
         <div class="nav">
           <div class="overlay1-nav"></div>
@@ -53,7 +53,7 @@
               <p>Cart</p>
             </div>
             
-          </div> -->
+          </div>
 
           <div class="login-btn"><a href="/login">Login</a></div>
         </div>
