aided my acount

--- a/codeBite/views/indexForLoggedInUser.ejs
+++ b/codeBite/views/indexForLoggedInUser.ejs
@@ -42,7 +42,7 @@
             </div>
             <div class="nav-link-i">
               <i class="ri-account-circle-line"></i>
-              <p>Account</p>
+             <a href="/myAccount" style="text-decoration: none;color:white;"> <p>Account</p></a>
             </div>
             <div class="nav-link-i">
               <i class="ri-account-circle-line"></i>
